@@ -14,3 +14,4 @@ NTP_HOST = 192.168.12.1
 HTTP_PATH = /cgi-bin/weather
 HTTP_PORT = 80
 HTTP_TIMEOUT = 10000
+TICK_PERIOD = 250
